# lightlang

./: .gitignore  Makefile.in  PKGBUILD  configure  configure.in  lightlang.spec
apps/: Makefile.in
apps/llrepo/: Makefile.in
apps/llrepo/src/: .gitignore  cli.py  const.py.in  ftp.py  llrepo.py.in  local.py  remote.py  repos.py
apps/sl/: Makefile.in
apps/sl/src/: config.h.in  help.c  linear_index.c  linear_index.h  managed_search.c  manager.c  search.c  string.c  string.h
apps/xsl/: Makefile.in
apps/xsl/src/tr/: ru.qm  ru.ts
apps/xsl/src/xsl/: .gitignore  AboutWindow.py  ActionsCollection.py  ChromeScrollBar.py  Const.py  Const.py.in  Css.py  CssCollection.py  CssSettingsTab.py  DictInfoWindow.py  DictsListWidget.py  DictsListWidgetItem.py  DictsManagerWindow.py  EntitledMenu.py  FictiveButtonEventFilter.py  GoogleTranslate.py  GoogleTranslatePanel.py  HelpBrowserWindow.py  HistoryPanel.py  HorizontalGrabWidget.py  IconsLoader.py  InternetLinksMenu.py  KeyboardModifiersTest.py  KeysGrabber.py  KeysGrabberThread.py  LangsList.py  LineEdit.py  ListBrowser.py  ListBrowserCaptionItem.py  ListBrowserInfoItem.py  Locale.py  Logger.py  Main.py  MainApplication.py  MainWindow.py  MiscSettingsTab.py  MouseButtonsTest.py  MouseSelector.py  NetworkSettingsTab.py  PopupWindow.py  (+26 more)
autom4te.cache/: output.0  requests  traces.0
docs/html/en/: Makefile.in
docs/html/ru/: Makefile.in
docs/man/en/: Makefile.in
docs/man/ru/: Makefile.in
docs/text/en/: Makefile.in
docs/text/ru/: Makefile.in
pkg/: Makefile.in
pkg/pkg/: .gitignore
resources/: Makefile.in
resources/dicts/: Makefile.in
resources/sounds/: Makefile.in
